# obs-ndi5-filter

./: .gitignore  CMakeLists.txt  README.md  buildspec.json  ndi5-texture-filter.cpp  ndi5-texture-filter.h
.github/scripts/utils.pwsh/: Setup-Host.ps1
.github/workflows/: main.yml
data/locale/: en-US.ini
inc/: Processing.NDI.DynamicLoad.h  Processing.NDI.Find.h  Processing.NDI.FrameSync.h  Processing.NDI.Lib.cplusplus.h  Processing.NDI.Lib.h  Processing.NDI.Recv.ex.h  Processing.NDI.Recv.h  Processing.NDI.Routing.h  Processing.NDI.Send.h  Processing.NDI.deprecated.h  Processing.NDI.structs.h  Processing.NDI.utilities.h
